fix conditional spacing

--- a/ourtake.css
+++ b/ourtake.css
@@ -85,7 +85,7 @@ h4 {
     padding: 25px;
     margin: 5px;
     width: 60%;
-    height: 400px;
+    height: 300px;
 }
 
 .front {
@@ -164,7 +164,7 @@ h4 {
     padding: 25px;
     margin: 5px;
     width: 25%;
-    height: 400px;
+    height: 300px;
 
 }
 
